--- a/styles.css
+++ b/styles.css
@@ -161,6 +161,32 @@ html, body{
 .oppenned li {
 margin-right: 168px;
  }
+@media (max-width: 990px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin: 7.5px -15px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+}
 
 
 
@@ -264,7 +290,6 @@ about p::after {
 
 
 .projects {
-    margin-bottom: 35px;
     height: inherit;
 
      background-color: black;
@@ -293,7 +318,7 @@ about p::after {
     	text-align: center;
 
     }
-    .contact td {
+    .contact li {
     	padding: 10px;
     	position: center center;
     		width: cover;
