--- a/styles.css
+++ b/styles.css
@@ -287,7 +287,7 @@ about p::after {
 	
     }
 
-    .contact li h1 h3{
+    .contact h1 h3{
     	padding: 10px;
     	position: center center;
     	width: cover;
