--- a/styles.css
+++ b/styles.css
@@ -218,24 +218,30 @@ margin-right: 168px;
   text-transform: uppercase;
 
 }
+.about {
+    -webkit-background-size: 100% 100%;
+    -moz-background-size: 100% 100%;
+    -o-background-size: 100% 100%;
+    background-size: 100% 100%;
+    padding: 500px 0 0 0;
 
+}
 
 
 .about p {
-    padding-top: 500px;
-    height: 800px;
+	font-family: 'Lobster', 'Raleway', sans-serif;
+    height: auto;
   display: block;
   position: relative;
   text-align: center;
    display: block;
    color: clack;
    letter-spacing: 2px;
-    font-size: .7em;
-   background-color:#D0D0D0 0.2;
+    font-size: 15px;
     }
-about p::after {
+about::after {
   content: "";
-  background: url(image.jpg);
+  background: url("http://dcldge.files.wordpress.com/2012/03/albany1.jpg");
   opacity: 0.5;
   top: 0;
   left: 0;
@@ -265,12 +271,7 @@ about p::after {
 .projects {
     height: inherit;
 
-     background-color: black;
-    -webkit-background-size: 100% 100%;
-    -moz-background-size: 100% 100%;
-    -o-background-size: 100% 100%;
-    background-size: 100% 100%;
-    padding: 500px 0 0 0;
+
 
     }
 
