--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ html, body{
   clear: both;
   height: auto;
   margin-right: -160px;
-  transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transition: all 0.5s cubic-bezier (0.68, -0.55, 0.265, 1.55);
 }
 
 .sub-menu li:first-child { margin-top: 180px; }
@@ -168,6 +168,7 @@ margin-right: 168px;
 	@media screen and (max-width:680px)
 	display: hidden;
 	font-size:30px;
+	position: relative;
 }
 
 
@@ -180,24 +181,25 @@ margin-right: 168px;
 
 .main {
   
-  position: relative;
+  position: absolute;
   top: 100px;
   text-align: center;
   font-size: 55px;
   padding-bottom: 40px;
   margin-top: -35px;
   width: auto;
-  height: 990px;
+  height: 800px;
   min-height: 628px;
  -moz-background-size: 100% 100%;
  -webkit-background-size: 100% 100%;
  -o-background-size: 100% 100%;
+ z-index: 1;
 
 }
 
 
 
-	.main h2, p {
+	.main h2 {
     color: black;
     font-family: 'Lobster', 'Raleway', sans-serif;
   font-weight: 600;
@@ -225,13 +227,13 @@ margin-right: 168px;
   position: relative;
   text-align: center;
    display: block;
-   color: clack;
+   color: black;
    letter-spacing: 2px;
     font-size: 5em;
     }
 .about::after {
   content: "";
-  background: url(https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTPsg6urhD6XK1rXk8wjSrGwDPm84CNZLQrrayMtL-sFHjPBNP-yL88Xkcm);
+  background: url("https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTPsg6urhD6XK1rXk8wjSrGwDPm84CNZLQrrayMtL-sFHjPBNP-yL88Xkcm");
   opacity: 0.5;
   top: 0;
   left: 0;
@@ -247,10 +249,7 @@ margin-right: 168px;
     z-index: 100;
 }
 
-.fixed {
-    position: fixed;
-    top: 0;
-}
+
 
 #header-wrap {
     position: relative;
