--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ html, body{
 }
 
 .open {
-  margin-bottom: 10px;
+  padding-bottom: 10px;
   position: fixed;
   top: 40px;
   right: 40px;
@@ -66,6 +66,7 @@ html, body{
   border-radius: 40px;
   background-color: black;
   position: absolute;
+  padding-bottom: 10px;
   right: 3px;
   top: 3px;
   overflow: hidden;
@@ -168,27 +169,43 @@ margin-right: 168px;
 	@media screen and (max-width:680px)
 	display: hidden;
 	font-size:30px;
-	position: relative;
+  position:relative;
+  padding-bottom: 15px;
 }
 
 
+.fa-paper-plane {
+  color: white;
+  background-color: black;
+  padding: 5px;
+  border: 2px solid black;
+border-radius: 25px;
+}
+.fa-paper-plane:hover {
+  background-color: red;
+}
+.fa-home {
+  color: white;
+  background-color: black;
+  padding: 5px;
+  border: 2px solid black;
+border-radius: 25px;
+}
+.fa-home:hover {
+  background-color: red;
+}
 
-
-
-    .header{
-        overflow: auto;
-    }
 
 .main {
-  
-  position: absolute;
+  background-color: rgb(151, 218, 207);
+  position: relative;
   top: 100px;
   text-align: center;
-  font-size: 55px;
-  padding-bottom: 40px;
-  margin-top: -35px;
+  padding-top: 70px;
+  margin-top: -150px;
+
   width: auto;
-  height: 800px;
+  height: 870px;
   min-height: 628px;
  -moz-background-size: 100% 100%;
  -webkit-background-size: 100% 100%;
@@ -196,8 +213,6 @@ margin-right: 168px;
  z-index: 1;
 
 }
-
-
 
 	.main h2 {
     color: black;
@@ -207,11 +222,22 @@ margin-right: 168px;
   margin-top: 0;
   margin-bottom: 80px;
   text-transform: uppercase;
-
+}
+.main p {
+  color: black;
+  font-family: 'Lobster', 'Raleway', sans-serif;
+font-weight: 600;
+font-size: 30px;
+margin-top: 0;
+margin-bottom: 80px;
+text-transform: uppercase;
 }
 .about {
-    height: 700px;
-	width: cover;
+  margin-top: 53px;
+    position: relative;
+    height: 1000px;
+	width: auto;
+  min-height: 628px;
     -webkit-background-size: 100% 100%;
     -moz-background-size: 100% 100%;
     -o-background-size: 100% 100%;
@@ -220,28 +246,94 @@ margin-right: 168px;
 
 }
 
-
-.about p {
-	font-family: 'Lobster', 'Raleway', sans-serif;
+.about h1 {
+  font-family: 'Lobster', 'Raleway', sans-serif;
   display: block;
   position: relative;
   text-align: center;
    display: block;
    color: black;
    letter-spacing: 2px;
-    font-size: 5em;
-    }
+    font-size: 45px;
+
+}
+
 .about::after {
   content: "";
-  background: url("https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTPsg6urhD6XK1rXk8wjSrGwDPm84CNZLQrrayMtL-sFHjPBNP-yL88Xkcm");
-  opacity: 0.5;
+  background: url("http://dcldge.files.wordpress.com/2012/03/albany1.jpg")no-repeat center center;
+  image-rendering: -webkit-optimize-contrast;
+  -webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+  opacity: 0.6;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
   position: absolute;
-  z-index: -1;   
+  z-index: -1;
 }
+@import "compass/css3";
+
+@import url(http://fonts.googleapis.com/css?family=Droid+Serif:400,400italic|Montserrat:400,700);
+@import "compass/reset";
+$fontSans : 'Coiny', sans-serif;
+
+
+$red : #e74c3c ;
+$redAL : rgba(231, 76, 60, 0.95);
+$dark :  #3d3d3d ;
+
+
+@mixin transition($transition-property, $transition-time, $method) {
+    -webkit-transition: $transition-property $transition-time $method;
+    -moz-transition: $transition-property $transition-time $method;
+    -ms-transition: $transition-property $transition-time $method;
+    -o-transition: $transition-property $transition-time $method;
+    transition: $transition-property $transition-time $method;
+}
+*{ box-sizing:border-box;}
+
+
+
+ .bar {
+ 	background: rgb(73, 188, 169);
+ 	width: 0;
+ 	margin: .25em 0;
+ 	color: black;
+ 	position: relative;
+ 	 transition:width 2s, background .2s;
+   -webkit-transform: translate3d(0,0,0);
+ 	 clear: both;
+ 	 &:nth-of-type(2n) {
+ 	 	background:lighten($red , 10% );
+ 	 }
+ 	 .label {
+		font-size: .75em;
+		padding: 1em;
+		background: $dark;
+		width: 8em;
+		display: inline-block;
+		position: relative;
+		z-index: 2;
+		font-weight: bold;
+		font-family: $fontSans;
+		 &.light {
+
+ 	 }
+
+}
+ }
+ .count {
+	position: absolute;
+	right: .25em;
+	top: .75em;
+ 	padding: .15em;
+	font-size: .75em;
+	font-weight: bold;
+	font-family: $fontSans;
+ }
 
 
 #header {
@@ -254,25 +346,49 @@ margin-right: 168px;
 #header-wrap {
     position: relative;
 }
+#section3 {
+  margin-top: -35px;
+    position: relative;
+    height: 1000px;
+  width: auto;
+  min-height: 628px;
+
+    padding: 200px 0 0 0;
+
+}
+.main::after {
+  content: "";
+  background: url("http://fellowproducts.com/wp-content/uploads/2015/05/brewingbasicshorizontal.jpg")no-repeat center center;
+  image-rendering: -webkit-optimize-contrast;
+  -webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+  opacity: 0.6;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+}
 
 
 
     .contact {
 	background-color: rgb(198, 214, 239);
     	position: absolute;
-        height: 100%;
+        height: 1000px;
     	width: 100%;
     	max-width: auto;
-       padding-top: -20;
-    	overflow-x: hidden;
-    	overflow: hidden;
+
     	text-align: center;
 	z-index: 1;
 	position: center center;
     	width: cover;
     	max-height: auto;
 
-	
+
     }
 
     .contact h1 h3 p{
@@ -283,4 +399,3 @@ margin-right: 168px;
 .btn-submit {
 	background-color: #5FBA7D;
 }
-
