--- a/styles.css
+++ b/styles.css
@@ -284,7 +284,7 @@ text-transform: uppercase;
     -moz-background-size: 100% 100%;
     -o-background-size: 100% 100%;
     background-size: 100% 100%;
-    padding: 200px 0 0 0;
+    padding-top: 40px;
 
 }
 
