--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -1,3 +1,4 @@
 //==== fonts =====
   
-  $mainFont: 'Lobster', 'Raleway', sans-serif;
+  $mainFont: 'Passion One', 'Raleway', sans-serif;
+  $secondaryFont: 'Lobster', 'Raleway', sans-serif ;
