--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,292 +1,152 @@
 @import "0-plugins/plugins-dir";
 @import "variables";
-
-$tablet: (
-  columns: 6,
-  gutter: 50px,
-  media: 599px,
-);
+@import "nav-menu";
+@import "sidebar";
+@import "socicons";
+@import "portfolio-thumbnails";
 
 body {
-  @include grid-media($desktop);
-  @include grid-media($tablet);
+  padding: 0;
+  margin: 0 auto;
 }
 .top {
-  @include grid-media($desktop) {
-	@include grid-column(12);
+  height: 100vh;
+  position: relative;
+  text-align: center;
+  font-family: $mainFont;
+
+h1 {
+  font-size: 3em;
+}
+h2, h3 {
+  font-size: 2em;
 }
 
-	text-align: center;
-	height: auto;
-	position: relative;
-  	text-align: center;
- 	z-index: 1;
-  padding-bottom: 3%;
+
+h1,h2,h3 {
+  font-weight: bold;
+}
+@include grid-media($desktop) {
+h1 {
+  font-size: 5em;
+}
+ h2 {
+  font-size: 4em;
+}
+ h3 {
+  font-size: 2em;
+}
+}
 }
 .top::after {
-	 content: "";
-  background: url("../images/albany1.jpg")no-repeat center center;
-  image-rendering: -webkit-optimize-contrast;
+   content: "";
   -webkit-background-size: cover;
+  background: url("../images/albany1.jpg")no-repeat center center;
+  bottom: 0;
+  image-rendering: -webkit-optimize-contrast;
+  left: 0;
+  opacity: 0.4;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: -1;
 -moz-background-size: cover;
 -o-background-size: cover;
 background-size: cover;
-  opacity: 0.4;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  position: absolute;
-  z-index: -1;
-}
-.top h1 {
-	font-family: $mainFont;
-	font-weight: bold;
-	font-size: 5em;
-	color: black;
-	padding: 1em;
-}
-.top h2 {
-	font-family: $mainFont;
-	font-weight: bold;
-	font-size: 4em;
-	color: black;
-	padding: 1em;
-}
-.top h3 {
-	font-family: $mainFont;
-	font-weight: bold;
-	font-size: 2em;
-	color: black;
-	padding: 1em;
 }
 
-.open {
-margin-top: -30px;
-  position: fixed;
-  top: 75px;
-  right: 40px;
-  width: 50px;
-  height: 50px;
-  display: block;
-  cursor: pointer;
-  transition: opacity 0.5s linear;
-  z-index: 20;
-
-}
-
-.open:hover { opacity: 0.8; }
-
-.open span {
-  display: block;
-  float: left;
-  clear: both;
-  height: 10px;
-  width: 40px;
-  border-radius: 40px;
-  background-color: black;
-  position: absolute;
-  padding-bottom: 10px;
-  right: 3px;
-  top: 3px;
-  overflow: hidden;
-  transition: all 1.0s ease;
-}
-
-.open span:nth-child(1) {
-  margin-top: 10px;
-  z-index: 9;
-}
-
-.open span:nth-child(2) { margin-top: 25px; }
-
-.open span:nth-child(3) { margin-top: 40px; }
-
-.sub-menu {
-  transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  height: 0;
-  width: 0;
-  right: 0;
-  top: 0;
-  position: absolute;
-  background-color: rgba(38, 84, 133, 0.54);
-  border-radius: 50%;
-  z-index: 18;
-  overflow: hidden;
-}
-
-.sub-menu li {
-  display: block;
-  float: right;
-  clear: both;
-  height: auto;
-  margin-right: -160px;
-  transition: all 0.5s cubic-bezier (0.68, -0.55, 0.265, 1.55);
-}
-
-.sub-menu li:first-child { margin-top: 180px; }
-
-.sub-menu li:nth-child(1) { -webkit-transition-delay: 0.05s; }
-
-.sub-menu li:nth-child(2) { -webkit-transition-delay: 0.10s; }
-
-.sub-menu li:nth-child(3) { -webkit-transition-delay: 0.15s; }
-
-.sub-menu li:nth-child(4) { -webkit-transition-delay: 0.20s; }
-
-.sub-menu li:nth-child(5) { -webkit-transition-delay: 0.25s; }
-
-.sub-menu li a {
-	margin-top: 10px;
-  color: #fff;
-  font-family: 'Coiny', Arial, Helvetica, sans-serif;
-  font-size: 30px;
-  width: 100%;
-  display: block;
-  float: left;
-  line-height: 30px;
-  text-decoration:none;
-}
-.sub-menu li a:hover {
-
-    opacity: .3;
-}
-.oppenned .sub-menu {
-  opacity: .8;
-  height: 400px;
-  width: 400px;
-}
-
-.oppenned span:nth-child(2) { overflow: visible; }
-
-.oppenned span:nth-child(1),
-.oppenned span:nth-child(3) {
-  z-index: 100;
-  transform: rotate(45deg);
-}
-
-.oppenned span:nth-child(1) { transform: rotate(45deg) translateY(12px) translateX(12px); }
-
-.oppenned span:nth-child(2) {
-  height: 400px;
-  width: 400px;
-  right: -160px;
-  top: -160px;
-  border-radius: 50%;
-  background-color: rgba(38, 84, 133, 0.54);
-}
-
-.oppenned span:nth-child(3) { transform: rotate(-45deg) translateY(-10px) translateX(10px); }
-
-.oppenned li {
-margin-right: 168px;
- }
-
-
-
-
-.socicons {
-
-	display: hidden;
-	font-size:30px;
-  position:relative;
-  padding-bottom: 15px;
-
-
-
-.fa-paper-plane {
-  color: white;
-  background-color: black;
-  padding: 5px;
-  border: 2px solid black;
-border-radius: 25px;
-}
-.fa-paper-plane:hover {
-  background-color: red;
-}
-.fa-home {
-  color: white;
-  background-color: black;
-  padding: 5px;
-  border: 2px solid black;
-border-radius: 25px;
-}
-.fa-home:hover {
-  background-color: red;
-}
-}
 
 
 .about {
-  @include grid-media($desktop) {
-  @include grid-column(12);
-}
 
+  height: 100%;
 	text-align: center;
-
 	position: relative;
-  	text-align: center;
  	z-index: 1;
-}
 
-.about h2 {
-  font-family: $mainFont;
+
+ h2 {
+  font-family: $secondaryFont;
   display: block;
   text-align: center;
-   display: block;
-   color: black;
-   letter-spacing: 2px;
-    font-size: 45px;
+  display: block;
+  color: white;
+  letter-spacing: 2px;
+  font-size: 45px;
 
+  }
+
+  #work {
+    @include grid-column(9);
+    line-height: 2;
+    color: black;
+    font-family: $mainFont;
+    font-size: 1.5em;
+    text-align: left;
+    list-style: none;
+ @include grid-media($desktop) {
+  @include grid-column(5);
+    @include grid-shift(.5);
+}
+  }
+  #workP {
+    line-height: 1;
+    font-size: 1em;
+  }
+
+
+
+
+ 
+ p {
+@include grid-column(12);
+  font-family: $mainFont;
+  line-height: 1;
+  font-size: 1.5em;
+  text-align: center;
+
+    @include grid-media($desktop) {
+  @include grid-column(4);
+  @include grid-shift(1);
+
+  }
+}
+  h4 {font-family:$mainFont; 
+    text-align:center;
 }
 
-
-.about::after {
-	 content: "";
-  background: url("../images/brewingbasicshorizontal.jpg")no-repeat center center;
-  background-size: cover;
-  image-rendering: -webkit-optimize-contrast;
-  -webkit-background-size: cover;
--moz-background-size: cover;
--o-background-size: cover;
-background-size: cover;
-  opacity: 0.2;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  position: absolute;
-  z-index: -1;
-}
-.about p {
-	font-size: 1.5em; font-family:'Coiny', sans-serif; font-weight: bold; padding-bottom: 3%; padding-top: 3%; text-align: center;
-}
-.about h4 {font-family:$mainFont; text-align:center;}
 @mixin transition($transition-property, $transition-time, $method) {
     -webkit-transition: $transition-property $transition-time $method;
     -moz-transition: $transition-property $transition-time $method;
     -ms-transition: $transition-property $transition-time $method;
     -o-transition: $transition-property $transition-time $method;
     transition: $transition-property $transition-time $method;
-}
+  }
+
+
 
  .bar {
+  @include grid-shift(1);
   padding: 1%;
- 	background: rgb(73, 188, 169);
+ 	background: lighten(red , 20% );
+  border: 1px solid black;
+  border-radius: 25px;
  	width: 0;
  	margin: .25em 0;
- 	color: black;
  	position: relative;
  	 transition:width 5s, background 2s;
    -webkit-transform: translate3d(0,0,0);
  	 clear: both;
  	 &:nth-of-type(2n) {
- 	 	background:lighten(red , 10% );
+ 	 	background:lighten(red , 20% );
  	 }
+
+
  	 .label {
 		font-size: .75em;
 		padding: 1em;
-		background: black;
+    font-size: 1em;
+    font-family: $mainFont;
 		width: auto;
 		display: inline-block;
 		position: relative;
@@ -297,291 +157,82 @@ background-size: cover;
 
  	 }
 
+
 }
  }
+}
+
+.about::after {
+   content: "";
+  -webkit-background-size: 100%;
+  background: url("../images/brewingbasicshorizontal.jpg")no-repeat center center;
+  bottom: 0;
+  image-rendering: -webkit-optimize-contrast;
+  left: 0;
+  opacity: 0.4;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: -1;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+}
  .count {
 	position: absolute;
 	right: .25em;
 	top: .75em;
  	padding: .15em;
-	font-size: .75em;
+	font-size: 1em;
 	font-weight: bold;
 	font-family: $mainFont;
  }
 
-.cards {
-	@include grid-column(12);
-	padding-top: 40px;
-  display: relative;
-  flex-wrap: no-wrap;
-  justify-content: space-between;
-  @include grid-media($tablet) {
-    @include grid-column(6)
-  }
-}
-.box {
-  @include grid-media($desktop) {
-  @include grid-column(2);
-}
-@include grid-media($tablet) {
-  @include grid-column(2);
-}
-}
-
-.card {
-
-
-  $base-border-color: gainsboro !default;
-  $base-border-radius: 3px !default;
-  $base-background-color: white !default;
-  $base-spacing: 1.5em !default;
-  $action-color: #477DCA !default;
-  $dark-gray: #333 !default;
-  $base-font-color: $dark-gray !default;
-  $card-border-color: $base-border-color;
-  $card-border: 1px solid $card-border-color;
-  $card-background: lighten($card-border-color, 10%);
-  $card-header-background: $card-background;
-  $card-margin: 1em;
-  $card-image-hover-opacity: 0.7;
-  $card-image-hover-color: #F8F2B4;
-
-  background-color: $card-background;
-  border: $card-border;
-  border-radius: $base-border-radius;
-  box-shadow: 0 2px 4px darken($base-background-color, 10%);
-  cursor: pointer;
-  flex-basis: 15em;
-  flex-grow: 1;
-  margin: 0 $card-margin $base-spacing $card-margin;
-  position: relative;
-  transition: all 0.2s ease-in-out;
-
-  .card-image {
-    background-color: $card-image-hover-color;
-    height: 150px;
-    max-height: 150px;
-    overflow: hidden;
-
-    img {
-      @include border-top-radius($base-border-radius);
-      opacity: 1;
-      transition: all 0.2s ease-in-out;
-      width: 100%;
-    }
-  }
-
-  .card-header {
-    background-color: $card-header-background;
-    border-bottom: $card-border;
-    border-radius: $base-border-radius $base-border-radius 0 0;
-    font-weight: bold;
-    line-height: 1.5em;
-    padding: ($base-spacing / 3) ($base-spacing / 2);
-    transition: all 0.2s ease-in-out;
-  }
-
-  .card-copy {
-    font-size: 0.9em;
-    line-height: 1.5em;
-    padding: ($base-spacing / 2) ($base-spacing / 2);
-
-    p {
-      margin: 0 0 ($base-spacing / 2);
-    }
-  }
-
-  &:focus,
-  &:hover {
-    cursor: pointer;
-
-    img {
-      opacity: $card-image-hover-opacity;
-    }
-  }
-
-  &:active {
-    background-color: $card-background;
-
-    .card-header {
-      background-color: $card-background;
-    }
-  }
-}
-.box {
-
-  @include grid-column(3);
-
-  @include grid-media($tablet){
-    @include grid-column(6);
-  }
-}
-.box {
-
-height: auto;
-padding-top: 3%;
-padding-bottom: 3%;
-list-style: none;
-  font-family: $mainFont;
-  display: block;
-  position: relative;
-  text-align: center;
-   display: block;
-   color: black;
-   color: yellow;
-   height: auto;
-   letter-spacing: 2px;
-     background: url("https://www.topdraw.com/assets/uploads/2014/02/fetch_file_1.png") no-repeat;
-     background-size: cover;
-
-}
-.about ul {
-    list-style: none;
-    @include grid-column(7);
-  @include grid-shift(2);
-  text-align: center;
-  font-weight: bolder;
-  padding: 3%;
-  font-size: 1em;
-  color: orange;
-}
-
-.about p {
-  @include grid-column(7);
-  @include grid-shift(2);
-  text-align: center;
-  font-weight: bold;
-  font-family: $mainFont;
-  font-weight: bolder;
-}
-.box ul{
-  list-style: none;
-  text-align: center;
-  font-weight: bold;
-  padding: 3%;
-  font-size: 1em;
-  font-family: $mainFont;
-}
-
-.sliding-panel-content {
-   $action-color: #477DCA !default;
-  $dark-gray: #333 !default;
-  $sliding-panel-border-color: $dark-gray;
-  $sliding-panel-background: lighten($sliding-panel-border-color, 5%);
-  $sliding-panel-color: #fff;
-  $sliding-panel-border: 1px solid $sliding-panel-border-color;
-  $sliding-panel-background-hover: $action-color;
-  $sliding-panel-color-hover: #fff;
-  $sliding-panel-background-focus: lighten($sliding-panel-background, 5%);
-
-
-  @include position(fixed, 0 auto 0 0);
-  @include size(220px, 100%);
-  background: $sliding-panel-background;
-  -webkit-overflow-scrolling: touch;
-  overflow-y: auto;
-  transform: translateX(-220px);
-  transition: all 0.25s linear;
-  z-index: 999999;
-
-  ul {
-    padding: 0;
-    margin: 0;
-  }
-
-  li {
-    list-style: none;
-  }
-
-  li a {
-    border-bottom: $sliding-panel-border;
-    color: $sliding-panel-color;
-    display: block;
-    font-weight: bold;
-    padding: 1em;
-    text-decoration: none;
-
-    &:focus {
-      background-color: $sliding-panel-background-focus;
-    }
-
-    &:hover {
-      background-color: $sliding-panel-background-hover;
-      color: $sliding-panel-color-hover;
-    }
-  }
-
-  &.is-visible {
-    transform: translateX(0);
-  }
-}
-
-.sliding-panel-fade-screen {
-  @include position(fixed, 0);
-  background: black;
-  opacity: 0;
-  transition: all 0.2s ease-in-out;
-  visibility: hidden;
-  z-index: 999998;
-
-  &.is-visible {
-    opacity: .4;
-    visibility: visible;
-    position: absolute;
-  }
-}
-
-.sliding-panel-button {
-  cursor: pointer;
-  display: inline-block;
-  outline: none;
-  background-color: black;
-  color: red;
-  font-weight: bold;
-  padding: 15px 20px;
-  position: relative;
-  border-radius: 5%;
-
-  img {
-    height: 1.3em;
-  }
-}
-form {
-  margin-top: 100px;
-  color: black;
-  width: 100%;
-  background: grey;
-  display: inline-block;
-  text-align: left;
+.skills {
+  background-color: red;
   height: auto;
-}
-
-
-input[type="text"] {
-  text-align: left;
   width: 100%;
-  padding: 5px;
-  margin-bottom: 20px;
+  background-size: 100%;
 }
 
-  .btn {
-    text-align: left;
-    vertical-align: middle;
-    width: auto;
-    font-size: 18px;
-    margin-top: 20px;
-    color: white;
-    background-color: black;
-    padding: 5px;
-    text-transform: uppercase;
-    }
+
+.box {
+@include grid-column(8);
+  background-size: cover;
+  background: url("https://www.topdraw.com/assets/uploads/2014/02/fetch_file_1.png") no-repeat;
+  color: yellow;
+  display: block;
+  font-family: $mainFont;
+  height: 67%;
+  height: auto;
+  list-style: none;
+  padding-bottom: 3%;
+  padding-top: 3%;
+  position: relative;
+  text-align: center;
+  @include grid-media($desktop) {
+    @include grid-column(5);
+    @include grid-shift(1);
+  }
+
+}
+
+.box li{
+  font-family: $mainFont;
+  margin-left: 5%;
+  font-weight: bold;
+  list-style: none;
+  text-align: left;
+}
+
+
 
     /* FOOTER */
 footer {
   float: left;
-  background-color: grey;
-  color: black;
-  margin-top: 50px;
+  background-color: black;
+  color: white;
+  padding-top: 0;
   padding: 15px 0;
   text-align: center;
   width: 100%; 
